--- a/src/webui/_locales/locale-names.json
+++ b/src/webui/_locales/locale-names.json
@@ -1,8 +1,11 @@
 {
   "devltr": "[Ƥȧȧƈķȧȧɠḗḗḓ Ȧȧƈƈḗḗƞŧḗḗḓ]",
   "devrtl": "Ԁɐɔʞɐƃǝp‬ ‮Wıɹɹoɹǝp",
+  "am": "አማርኛ",
   "ar": "العربية",
   "az": "azərbaycan dili",
+  "be": "Беларуская",
+  "bn": "বাংলা",
   "bo": "བོད་ཡིག",
   "cs": "Čeština",
   "de": "Deutsch",
@@ -11,6 +14,7 @@
   "es": "Español",
   "et": "Eesti",
   "fa": "فارسی",
+  "fa_AF": "فارسی دری",
   "fi": "Suomi",
   "fr": "Français",
   "hi": "हिन्दी",
@@ -19,7 +23,10 @@
   "id": "Bahasa Indonesia",
   "it": "Italiano",
   "kk": "қазақ тілі",
+  "km": "ភាសាខ្មែរ",
   "ko": "한국어",
+  "ky": "Кыргызча",
+  "my": "မြန်မာဘာသာ",
   "nb": "Norsk bokmål",
   "nl": "Nederlands",
   "pl": "Polski",
@@ -27,12 +34,14 @@
   "pt_PT": "Português (Portugal)",
   "ru": "Русский",
   "sv": "Svenska",
-  "ug@Latn": "Uyghurche",
-  "uz@Cyrl": "Ўзбекча",
-  "uz@Latn": "O'zbekcha",
+  "tg": "Тоҷикӣ",
   "th": "ภาษาไทย",
   "tk": "Türkmençe",
   "tr": "Türkçe",
+  "ug@Latn": "Uyghurche",
+  "uk": "Українська",
+  "uz@Cyrl": "Ўзбекча",
+  "uz@Latn": "O'zbekcha",
   "vi": "Tiếng Việt",
   "zh": "简体中文",
   "zh_TW": "繁体中文"
