--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -343,6 +343,10 @@
     "message": "‮Noɹʍɐʎ‬",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Norway will be used."
   },
+  "settings#egress-region#select-pl": {
+    "message": "‮Ԁoʅɐup‬",
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+  },
   "settings#egress-region#select-ro": {
     "message": "‮ᴚoɯɐuıɐ‬",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Romania will be used."
