--- a/src/webui/_locales/th/messages.json
+++ b/src/webui/_locales/th/messages.json
@@ -20,7 +20,7 @@
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
     },
     "nav#logs": {
-        "message": "Logs",
+        "message": "ปูม",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Logs' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
     },
     "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
