Latest translations and new languages.

--- a/src/webui/_locales/locale-names.json
+++ b/src/webui/_locales/locale-names.json
@@ -29,6 +29,7 @@
   "my": "မြန်မာဘာသာ",
   "nb": "Norsk bokmål",
   "nl": "Nederlands",
+  "om": "Afaan Oromo",
   "pl": "Polski",
   "pt_BR": "Português (Brasil)",
   "pt_PT": "Português (Portugal)",
@@ -36,6 +37,7 @@
   "sv": "Svenska",
   "tg": "Тоҷикӣ",
   "th": "ภาษาไทย",
+  "ti": "ትግርኛ",
   "tk": "Türkmençe",
   "tr": "Türkçe",
   "ug@Latn": "Uyghurche",
