--- a/src/webui/_locales/fr/messages.json
+++ b/src/webui/_locales/fr/messages.json
@@ -15,6 +15,10 @@
         "message": "Vous avez configuré Psiphon pour qu’il utilise un serveur «mandataire ascendant ».<br>\nCependant, il nous semble impossible de nous connecter à un serveur Psiphon par ce mandataire.<br>\nVeuillez corriger les paramètres et ressayer.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Pologne",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Montrer les journaux de débogage",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
