--- a/src/webui/_locales/hr/messages.json
+++ b/src/webui/_locales/hr/messages.json
@@ -15,6 +15,10 @@
         "message": "Konfigurirali ste Psiphon da koristi \"uzvodni proxy\".<br>\nKako bilo, čini se da nismo u mogućnosti spojiti se sa Psiphon poslužiteljem kroz taj proxy.<br>\nMolimo Vas da to popravite i pokušate ponovno.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Poljska",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Prikaži zapise o otklanjanju pogreški",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
