--- a/src/webui/_locales/ar/messages.json
+++ b/src/webui/_locales/ar/messages.json
@@ -15,6 +15,10 @@
         "message": "لقد  ضبطت سايفون ليستعمل أبستريم بروكسي  upstream proxy\" .<br\">\nومع ذلك، يظهر إننا غير قادرين على الإتصال بسيرفر سايفون من خلال هذا البروكسي.<br>\nالرجاء إعادة ضبط  الإعدادات والمحاولة  من جديد .",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "بولندا",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "أظهر سجلات التصحيح ",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
