--- a/src/webui/_locales/az/messages.json
+++ b/src/webui/_locales/az/messages.json
@@ -15,6 +15,10 @@
         "message": "Psiphonu \"yuxarı axın proksisinin\" istifadəsi üçün quraşdırmısnız.<br>\nAncaq, Psiphon serverinə qeyd olunan proksidən qoşula bilmirik.<br>\nZəhmət olmasa, quraşdırmanı müəyyən edin və yenidən cəhd göstərin.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Poland",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Xəta girişlərini göstər",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
