--- a/src/webui/_locales/be/messages.json
+++ b/src/webui/_locales/be/messages.json
@@ -15,6 +15,10 @@
         "message": "Вы сканфігуравалі Psiphon на выкарыстанне \"вышэйстаячага проксі-сервера\"<br>.\nАднак мы, здаецца, не можам падлучыцца да сервера Psiphon праз гэты проксі-сервер<br>.\nКалі ласка, выпраўце налады і паспрабуйце зноў.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Poland",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Паказаць журналы адладкі",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
