--- a/src/webui/_locales/id/messages.json
+++ b/src/webui/_locales/id/messages.json
@@ -15,6 +15,10 @@
         "message": "Anda telah mengatur Psiphon agar menggunakan “proksi hulu”.<br>\nAkan tetapi, sepertinya kami tidak dapat tersambung ke server Psiphon lewat proksi itu.<br>\nHarap benahi dulu pengaturannya, lalu coba lagi.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Polandia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Tampilkan catatan debug",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
