--- a/src/webui/_locales/it/messages.json
+++ b/src/webui/_locales/it/messages.json
@@ -15,6 +15,10 @@
         "message": "You have configured Psiphon to use an “upstream proxy”.<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease fix the settings and try again.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Polonia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Mostra registrazioni di debug",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
