--- a/src/webui/_locales/kk/messages.json
+++ b/src/webui/_locales/kk/messages.json
@@ -15,6 +15,10 @@
         "message": "Psiphon қолданбасын “сыртқы проксиді” пайдаланатын етіп баптағансыз.<br>\nАлайда, сол прокси арқылы біз Psiphon серверіне қосылым орната алмайтын сияқтымыз.<br>\nПараметрлерді түзетіп, қайталап көріңіз.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Poland",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Жөндеу журналдарын көрсету",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
