--- a/src/webui/_locales/ky/messages.json
+++ b/src/webui/_locales/ky/messages.json
@@ -15,6 +15,10 @@
         "message": "Сиз Psiphon-ду \"каршы проксини\" колдонууга конфигурациялагансыз. <br>\nОшентсе да, ал прокси аркылуу биз Psiphon серверине байланыша албайт окшойбуз.<br>\nБаптоолорду оңдоп, кайталап көрүңүз.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Poland",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Жөндөө журналын көрсөтүү",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
