--- a/src/webui/_locales/pt_BR/messages.json
+++ b/src/webui/_locales/pt_BR/messages.json
@@ -15,6 +15,10 @@
         "message": "Você configurou o Psiphon para se conectar a outro servidor proxy.<br>\nContudo, parece impossível se conectar a ele.<br>\nPor favor corrija as configurações e tente novamente.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Polônia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Mostrar logs de depuração",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
