--- a/src/webui/_locales/ti/messages.json
+++ b/src/webui/_locales/ti/messages.json
@@ -15,6 +15,10 @@
         "message": "ሳይፎን (Psiphon)  \"ላዕላዋይ ተካኢ\" ከምዝጥቀም ጌርካ ኣወሃሂድካያ ኣለኻ።<br>\nነገር ግን በታ ተካኢ ወይ ፕሮክሲ ምስ ሰርቨር ሳይፎን (Psiphon) ክንራኸብ ኣይክኣልንን ይመስል ኣሎ፡፡<br>\nብኽብረትካ ነቲ ሴቲንግስ ብምዕራይ ደጊምካ ፈትን፡፡",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "ፖላንድ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "ዲባግ ምሎግስ ኣርኢ",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
