--- a/src/webui/_locales/tk/messages.json
+++ b/src/webui/_locales/tk/messages.json
@@ -15,6 +15,10 @@
         "message": "Siz “upstream proxy” görnüşinde ulanmak üçin sazlandy.<br>\nÝöne, Psiphon-a ol proksi arkaly serwere birikmäni başaranok.<br>\nHaýyş täzeden sazla we täzeden synanyş.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Poland",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "\"Debug\" loglary görkez",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
