--- a/src/webui/_locales/tr/messages.json
+++ b/src/webui/_locales/tr/messages.json
@@ -15,6 +15,10 @@
         "message": "Psiphon'ı şu anda \"üst vekil sunucusu\" olarak sistem vekil sunucunuzu kullanmak üzere yapılandırmışsınız.<br>\nAncak bir Psiphon sunucusuna bu vekil aracılığıyla bağlanamıyoruz.<br>\nLütfen ayarları düzeltip yeniden deneyin.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Polonya",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Hata ayıklama kayıtlarını göster",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
