--- a/src/webui/_locales/vi/messages.json
+++ b/src/webui/_locales/vi/messages.json
@@ -15,6 +15,10 @@
         "message": "Psiphon hiện được cấu hình để dùng proxy của hệ thống làm “proxy luồng trên”.<br>\nTuy nhiên, chúng tôi dường như không thể kết nối với máy chủ Psiphon qua proxy đó.<br>\nXin điều chỉnh lại các thiết đặt và thử lại.",
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
+    "settings#egress-region#select-pl": {
+        "message": "Ba Lan",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
+    },
     "logs#show-debug-label": {
         "message": "Xem ký sự gỡ lỗi",
         "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
