--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -359,6 +359,10 @@
     "message": "[Şīīƞɠȧȧƥǿǿřḗḗ]",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
   },
+  "settings#egress-region#select-sk": {
+    "message": "[Şŀǿǿṽȧȧķīīȧȧ]",
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Slovakia will be used."
+  },
   "settings#egress-region#select-us": {
     "message": "[Ŭŭƞīīŧḗḗḓ Şŧȧȧŧḗḗş]",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the United States will be used."
