--- a/src/webui/_locales/hi/messages.json
+++ b/src/webui/_locales/hi/messages.json
@@ -171,6 +171,10 @@
         "message": "सिंगापुर",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
     },
+    "settings#egress-region#select-sk": {
+        "message": "स्लोवाकिया",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Slovakia will be used."
+    },
     "settings#egress-region#select-nl": {
         "message": "नीदरलैंड",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Netherlands will be used."
