--- a/src/webui/_locales/fa/messages.json
+++ b/src/webui/_locales/fa/messages.json
@@ -124,19 +124,19 @@
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
     "settings#disable-timeouts#heading": {
-        "message": "غیر فعال کردن وقفه برای شبکه های کم سرعت",
+        "message": "غیر فعال کردن زمان انتظار برای شبکه‌های کم سرعت",
         "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
     },
     "settings#disable-timeouts#help-text": {
-        "message": "در صورت فعال بودن, اتصال شما به سرور سایفون قطع نخواهد شد",
+        "message": "در صورت فعال بودن، اتصال شما به سرور سایفون قطع نخواهد شد",
         "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
     },
     "settings#disable-timeouts#reason": {
-        "message": "وقتی با اتصال شبکه بسیار کند این را فعال کنید, کمتر احتمال دارد که اتصال به صورت غیر منتظره قطع شود.",
+        "message": "وقتی با اتصال شبکه بسیار کند این را فعال کنید، کمتر احتمال دارد که اتصال به صورت غیرمنتظره قطع شود.",
         "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "settings#disable-timeouts#enable-label": {
-        "message": "غیر فعال کردن وقفه برای شبکه های کم سرعت",
+        "message": "غیر فعال کردن وقفه برای شبکه‌های کم سرعت",
         "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
     },
     "settings#egress-region#heading": {
@@ -171,6 +171,10 @@
         "message": "سنگاپور",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
     },
+    "settings#egress-region#select-sk": {
+        "message": "اسلواکی",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Slovakia will be used."
+    },
     "settings#egress-region#select-nl": {
         "message": "هلند",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Netherlands will be used."
@@ -188,7 +192,7 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
     "settings#egress-region#select-hk": {
-        "message": "هنگ کنگ",
+        "message": "هنگ‌کنگ",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Hong Kong will be used."
     },
     "settings#egress-region#select-at": {
@@ -344,19 +348,19 @@
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
     "settings#upstream-proxy#set-username-password-error-msg": {
-        "message": "شما باید تعیین کنید هر دو نام کاربری و رمز عبور را، و یا خالی بگذارید بدون احراز هویت.",
+        "message": "شما باید هر دو نام کاربری و رمز عبور را تعیین کنید، و یا خالی برای عدم احراز هویت هر دو را خالی بگذارید.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
     "settings#upstream-proxy#set-hostname-port-error-msg": {
-        "message": "شما باید تعیین کنید هر دو نام سرور و پورت را، و یا خالی بگذارید هر دو انتخاب خودکار.",
+        "message": "شما باید هر دو نام سرور و پورت را  تعیین کنید، و یا برای انتخاب خودکار هر دو را خالی بگذارید.",
         "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
-        "message": "تنظیم یک نام کاربری و رمز عبور نیز نیاز دارد به تنظیم یک نام میزبان و پورت",
+        "message": "تنظیم یک نام کاربری و رمز عبور به تنظیم یک نام میزبان و پورت نیز نیاز دارد",
         "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
-        "message": "تنظیم یک دامنه نیاز دارد به تنظیم یک نام کاربری و رمز عبور",
+        "message": "انتخاب یک نام کاربری و رمز عبور برای تنظیم دامنه ضروری است",
         "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#upstream-proxy#error-modal-title": {
